--- a/RWAutoSell_Patch/RWAutoSell_Patch.csproj
+++ b/RWAutoSell_Patch/RWAutoSell_Patch.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyHarmony.cs" />
     <Compile Include="MyLog.cs" />
     <Compile Include="RWAutoSell_Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
