--- a/RWAutoSell_Patch/RWAutoSellLillyPatch.csproj
+++ b/RWAutoSell_Patch/RWAutoSellLillyPatch.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7D6C93C7-4446-4FC9-82D7-CB2C7A1CF413}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RWAutoSellLillyPatch</RootNamespace>
+    <RootNamespace>Lilly.RWAutoSellPatch</RootNamespace>
     <AssemblyName>RWAutoSellLillyPatch</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
